@@ -1,15 +1,24 @@
 {
-  "timestamp" : "2023-07-30T08:19:20Z",
+  "timestamp" : "2023-07-31T16:23:22Z",
   "count_outdated" : 203,
   "uniques_outdated" : 143,
-  "count" : 205,
-  "uniques" : 144,
+  "count" : 206,
+  "uniques" : 145,
   "clones" : [
     {
       "timestamp": "2023-07-28T00:00:00Z",
       "count": 2,
       "count_minmax": [ 2, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-07-31T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
