@@ -1,10 +1,15 @@
 {
-  "count": 2,
-  "uniques": 1,
+  "count": 3,
+  "uniques": 2,
   "clones": [
     {
       "timestamp": "2023-07-28T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-07-31T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
