@@ -1,3 +1,12 @@
+2023-07-31T16:23:22Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5717133352 # 1074
+* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-31
+* notice: last 14d: unq all: 2 3
+* notice: prev accum: outdated-unq outdated-all / unq all: 143 203 / 144 205
+* notice: next accum: outdated-unq outdated-all / unq all: 143 203 / 145 206
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2023-07-31]
+
 2023-07-30T08:19:20Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5705165223 # 1070
 * notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-30
